[backend] feature(chaining): add scope in workflow configuration